--- a/main.ipynb
+++ b/main.ipynb
@@ -21,7 +21,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_18759/4175392196.py:6: DeprecationWarning: \n",
+      "/tmp/ipykernel_21652/4175392196.py:6: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +524,7 @@
        "1             0.380442  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +549,7 @@
        "<BarContainer object of 2 artists>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,6 +582,177 @@
     "    for sql_stmt in sql_stmts:\n",
     "        session.exec(sql_stmt)\n",
     "    session.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>restaurant_uuid</th>\n",
+       "      <th>year_month</th>\n",
+       "      <th>total_month_active_users</th>\n",
+       "      <th>retained_users_count</th>\n",
+       "      <th>retained_precentage</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0056924865664309baa6002a31f4870b</td>\n",
+       "      <td>202308</td>\n",
+       "      <td>47</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0.297872</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0065b4f8ae694fbe9ca4ff36af265ab4</td>\n",
+       "      <td>202308</td>\n",
+       "      <td>221</td>\n",
+       "      <td>28</td>\n",
+       "      <td>0.126697</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0065b4f8ae694fbe9ca4ff36af265ab4</td>\n",
+       "      <td>202312</td>\n",
+       "      <td>136</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0.080882</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>008e1bc075bd49929295847f399b8dfd</td>\n",
+       "      <td>202308</td>\n",
+       "      <td>49</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.163265</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>008e1bc075bd49929295847f399b8dfd</td>\n",
+       "      <td>202312</td>\n",
+       "      <td>62</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.112903</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1254</th>\n",
+       "      <td>fe58b00b961842c7b8a6966b09127fe1</td>\n",
+       "      <td>202308</td>\n",
+       "      <td>111</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0.126126</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1255</th>\n",
+       "      <td>fece877c137344ab89918e39c53138e5</td>\n",
+       "      <td>202308</td>\n",
+       "      <td>22</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.136364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1256</th>\n",
+       "      <td>fecf8d5050d9487c9fbbd4bf6d02bf0e</td>\n",
+       "      <td>202308</td>\n",
+       "      <td>329</td>\n",
+       "      <td>84</td>\n",
+       "      <td>0.255319</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1257</th>\n",
+       "      <td>fecf8d5050d9487c9fbbd4bf6d02bf0e</td>\n",
+       "      <td>202312</td>\n",
+       "      <td>267</td>\n",
+       "      <td>68</td>\n",
+       "      <td>0.254682</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1258</th>\n",
+       "      <td>fff03c7a1a59443c817ea2e1bdbba7ff</td>\n",
+       "      <td>202308</td>\n",
+       "      <td>129</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0.147287</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1259 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       restaurant_uuid  year_month  total_month_active_users  \\\n",
+       "0     0056924865664309baa6002a31f4870b      202308                        47   \n",
+       "1     0065b4f8ae694fbe9ca4ff36af265ab4      202308                       221   \n",
+       "2     0065b4f8ae694fbe9ca4ff36af265ab4      202312                       136   \n",
+       "3     008e1bc075bd49929295847f399b8dfd      202308                        49   \n",
+       "4     008e1bc075bd49929295847f399b8dfd      202312                        62   \n",
+       "...                                ...         ...                       ...   \n",
+       "1254  fe58b00b961842c7b8a6966b09127fe1      202308                       111   \n",
+       "1255  fece877c137344ab89918e39c53138e5      202308                        22   \n",
+       "1256  fecf8d5050d9487c9fbbd4bf6d02bf0e      202308                       329   \n",
+       "1257  fecf8d5050d9487c9fbbd4bf6d02bf0e      202312                       267   \n",
+       "1258  fff03c7a1a59443c817ea2e1bdbba7ff      202308                       129   \n",
+       "\n",
+       "      retained_users_count  retained_precentage  \n",
+       "0                       14             0.297872  \n",
+       "1                       28             0.126697  \n",
+       "2                       11             0.080882  \n",
+       "3                        8             0.163265  \n",
+       "4                        7             0.112903  \n",
+       "...                    ...                  ...  \n",
+       "1254                    14             0.126126  \n",
+       "1255                     3             0.136364  \n",
+       "1256                    84             0.255319  \n",
+       "1257                    68             0.254682  \n",
+       "1258                    19             0.147287  \n",
+       "\n",
+       "[1259 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_querying_first_task_fp = (\n",
+    "    Path().parent / \"sql_queries\" / \"data_querying_per_restaurant.sql\"\n",
+    ")\n",
+    "sql_stmt = read_sql_files(data_querying_first_task_fp)[0]\n",
+    "df_retained_users = pd.read_sql((sql_stmt), DB_ENGINE)\n",
+    "df_retained_users"
    ]
   }
  ],
