--- a/main.ipynb
+++ b/main.ipynb
@@ -938,6 +938,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "While the above viz is not the most appealing, it helps to show that for the 6 months we have data for we have an almost steady retenetion rate of 50% of our user base."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Overall user base retention rate"
    ]
   },
@@ -975,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1130,7 +1137,7 @@
        "[3604 rows x 5 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1140,8 +1147,17 @@
     "    Path().parent / \"sql_queries\" / \"data_querying_per_restaurant.sql\"\n",
     ")\n",
     "sql_stmt = read_sql_files(data_querying_first_task_fp)[0]\n",
-    "df_retained_users = pd.read_sql((sql_stmt), DB_ENGINE)\n",
-    "df_retained_users"
+    "df_retained_users_per_rest = pd.read_sql((sql_stmt), DB_ENGINE)\n",
+    "df_retained_users_per_rest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plotting the results of the previous DF **directly** will not be a good viz, business stakeholders should advise on the criteria to filter restaurants by. for example excellant restaurants would have the following for 3 consecutive months:\n",
+    "1. 100+ monthly retained users for 3+ conseectuive months\n",
+    "2. monthly retenetion rate of >50% for 3+ consectuive months"
    ]
   }
  ],
